# Information-Theretic-Bounds

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  RELEASE_RUNBOOK.md  TUTORIAL_PYPI_ITBOUND_FROM_FDCATE.md  fBound.py  pyproject.toml  radius_analysis.py  repro_map.json
docs/: aggregation_modes.md  artifact_contract.md  cli-config.example.yaml  config.md  quickstart.md  results_schema_v0.json  results_schema_v0.md  share_release_v0.1.0.md
fBound/: .gitignore  AGENTS.md  README.md  causal_bound.py  data_generating.py  divergences.py  fBound_v0.py  load_plot1.py  load_plot2.py  load_plot_idhp_ribbon.py  load_plot_n.py  load_plot_n_debiased.py  load_plot_ribbon.py  manski.py  models.py  plot1.py  plot2.py  plot3_ihdp_ate.py  plot_idhp_ribbon.py  plot_n.py  plot_n_ate.py  plot_n_coverage_v2.py  plot_n_debiased.py  plot_x0_ribbon_mc_eval_fixed.py  result.py  run_example.py  test_sanity.py  utils.py
scripts/: baseline_snapshot.py  release_env_bootstrap.sh  release_gate_rehearsal.sh  release_preflight.sh  release_trusted_publisher_checklist.md  release_version_sync_check.sh
tests/: test_aggregation_p0.py  test_artifact_contract.py  test_claims_engine.py  test_cli_demo.py  test_cli_example.py  test_cli_quick.py  test_cli_reproduce.py  test_cli_run.py  test_config_validation.py  test_docs_assets.py  test_fit_api.py  test_hf_space_contract.py  test_import_itbound.py  test_packaging_metadata_contract.py  test_plotting.py  test_readme_landing_contract.py  test_readme_pypi_rendering.py  test_release_ci_contract.py  test_release_docs_contract.py  test_release_external_ops_contract.py  test_release_gate_rehearsal_contract.py  test_release_gitignore_contract.py  test_release_pipeline_contract.py  test_release_preflight_contract.py  test_release_runbook_postrelease_contract.py  (+3 more)
(+195 files in other folders)
